--- a/pythonanywhere/templates/group_index.html
+++ b/pythonanywhere/templates/group_index.html
@@ -633,7 +633,7 @@
             right: 20px; /* Spacing from the right edge */
             width: 250px;
             min-height: 700px;
-            background-color: var(--hdr-color);
+            background-color: var(--ctr-color);
             padding: 15px;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
