Implement mutation logging and rollback functionality with admin interface updates

--- a/pythonanywhere/templates/admin.html
+++ b/pythonanywhere/templates/admin.html
@@ -310,6 +310,7 @@
             <button id="dump-database">Dump Database</button>
             <a class="db" href="/database">Database editor</a>
             <a class="db" href="/admin-utm-tracking">UTM Tracking</a>
+            <a class="db" href="/mutations_page">DB Logs</a>
             <button id="scan-updates">Scan for updates</button>
             <div id="update-status"></div>
             <button id="run-update" style="background-color: red;">Run updates</button>
@@ -364,9 +365,6 @@
 
     <script>
         const sessionKey = sessionStorage.getItem("session_key");
-        if (!sessionKey) {
-            showModal();
-        }
 
         function showModal() {
             window.location.href = '/login_page?redirect=/admin_page&warning=true';
