--- a/pythonanywhere/templates/admin.html
+++ b/pythonanywhere/templates/admin.html
@@ -21,7 +21,7 @@
         }
 
         .container {
-            max-width: 1200px;
+            max-width: 1400px;
             margin: 20px auto;
             padding: 20px;
             background-color: #3A3A3A;
@@ -313,10 +313,10 @@
             <a class="db" href="/mutations_page">DB Logs</a>
             <button id="scan-updates">Scan for updates</button>
             <div id="update-status"></div>
-            <button id="run-update" style="background-color: red;">Run updates</button>
+            <button id="run-update">Run updates</button>
             <button id="scan-dev-vs-master">Check Dev vs Master</button>
             <div id="dev-status"></div>
-            <button id="merge-dev-master" style="background-color: red;">Merge Dev into Master</button>
+            <button id="merge-dev-master">Merge Dev into Master</button>
         </div>
 
         <!-- Password Confirmation Modal -->
