--- a/pythonanywhere/templates/admin.html
+++ b/pythonanywhere/templates/admin.html
@@ -285,6 +285,7 @@
     </script>
 
     <script src="/static/custom-alert.js"></script>
+    <script src="static/admin.js"></script>
       
 </head>
 <body>
