--- a/pythonanywhere/templates/bot_info.html
+++ b/pythonanywhere/templates/bot_info.html
@@ -40,6 +40,7 @@
     }
   </style>
 </head>
+<script src="static/admin.js"></script>
 <body>
   <button onclick="window.location.href='/pws'">Terug</button>
   <div class="container">
@@ -91,7 +92,7 @@
             }
             `;
             document.head.appendChild(style);
-            document.write('<p>You\'re seeing confetti because you\'re using Linux, and we think that\'s worth celebrating!</p>');
+            document.write('<p>You\'re seeing confetti because you\'re using Linux, and I think that\'s worth celebrating!</p>');
         }
          else {
           document.write('3. Een "normale" modus waarin je tegen je vrienden (heb je die?) of andere spelers kunt spelen.');
