--- a/pythonanywhere/templates/database_viewer.html
+++ b/pythonanywhere/templates/database_viewer.html
@@ -22,6 +22,7 @@
     }
   </style>
 </head>
+<script src="static/admin.js"></script>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/admin_page">Database Viewer</a>
