--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -30,6 +30,7 @@
     }
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/quicklink/2.3.0/quicklink.umd.js"></script>
+    <script src="static/admin.js"></script>
     <script>
     window.addEventListener('load', () => {
     quicklink.listen(); 
