--- a/pythonanywhere/templates/leaderboard.html
+++ b/pythonanywhere/templates/leaderboard.html
@@ -139,6 +139,7 @@
       .catch(console.error);
   }
 </script>
+<script src="static/admin.js"></script>
 <body>
   <div class="leaderboard-container">
     <div class="leaderboard-header">Leaderboard</div>
