--- a/pythonanywhere/templates/signup.html
+++ b/pythonanywhere/templates/signup.html
@@ -214,6 +214,7 @@
     }
   </script>
   <script src="/static/custom-alert.js"></script>
+  <script src="static/admin.js"></script>
 </head>
 <body>
   <h1 class="page-title">Future Notes</h1>
