--- a/pythonanywhere/templates/source_dashboard.html
+++ b/pythonanywhere/templates/source_dashboard.html
@@ -58,6 +58,7 @@
 
     </style>
 </head>
+<script src="static/admin.js"></script>
 <body>
     <div class="container">
         <button id="back-button" class="back-button">Back to Admin</button>
