--- a/pythonanywhere/templates/spectate.html
+++ b/pythonanywhere/templates/spectate.html
@@ -84,6 +84,7 @@
         .catch(console.error);
     }
   </script>
+  <script src="static/admin.js"></script>
 </head>
 <body>
   <a href="/spectate" class="back-button">← Back</a>
