--- a/pythonanywhere/templates/spectate_list.html
+++ b/pythonanywhere/templates/spectate_list.html
@@ -83,6 +83,7 @@
         .catch(console.error);
     }
   </script>
+  <script src="static/admin.js"></script>
 </head>
 <body>
   <a href="/pws" class="back-button">← Back</a>
