--- a/pythonanywhere/templates/todo.html
+++ b/pythonanywhere/templates/todo.html
@@ -145,6 +145,7 @@
       }
     }
   </style>
+  <script src="static/admin.js"></script>
 
 <header>
     <!-- Toggle button (only visible on mobile) -->
