--- a/pythonanywhere/templates/setup.html
+++ b/pythonanywhere/templates/setup.html
@@ -174,6 +174,7 @@
         .catch(console.error);
     }
   </script>
+  <script src="static/admin.js"></script>
 </head>
 <body>
   <button id="leaveGameButton">Game verlaten</button>
